CHANGELOG

2017-09-18: move v2 to main version; bug fixes
2017-09-16: alpha release of v2
2017-09-14: Target new version to API 26 and above. (For one, it allows us to not deal with the Jelly Bean span bug, which still exists. Also, "tlh" as a locale does not exist on older devices.)
2017-09-10: Migrated from ant to gradle (deprecate support of API below 16). Bug fixes. Enabled TTS always.
2017-09-10: Removed "float" mode. This was not being used and was confusing users.
2017-09-08: Misc. edits.
2017-08-20: Add (almost all) Klingon lines from movies as entries.
2017-08-14: Renumber entry IDs as part of clean-up to prep for DSC (Star Trek: Discovery) entries.
2017-08-09: Last version (maybe) before freezing development.
2017-08-06: Links and edits to weather words.
2017-08-03: More German notes translated. Fixed errors in a few entries.
2017-08-01: Add German examples. Add names from STLV. Fixed some typos.
2017-07-31: New words from qep'a' 2017 and Star Trek: Discovery, including German translations.
2017-07-25: Make German the primary language when option is selected.
2017-07-18: Enabled German search tags and notes in database.
2017-07-13: Added vocabulary about marriage.
2017-07-12: Added 2 entries from the {paq'batlh}.
2017-07-05: Edits to some {may'}-related entries. Edit notes on rovers on adjectives.
2017-05-29: Various minor edits.
2017-04-04: Finished entering German definitions.
2017-02-21: Minor edits.
2017-02-01: Added more definitions in German. Minor edits.
2016-12-01: Add vocabulary from Pop Culture Hero Coalition announcement.
2016-11-03: Add Halloween and qepHom vocabulary.
2016-10-20: Add info on {jeS:v}.
2016-09-27: Add entries for (uncertain) canon from Smithsonian GO FLIGHT app.
2016-08-30: Add canon from Smithsonian Air & Space Magazine interview.
2016-08-01: New words from qep'a' 2016.
2016-07-01: More minor edits to notes.
2016-04-13: Minor edits to notes.
2016-02-16: Fixed Planck time bug. Added many German definitions.